more mobile spacing, font, header fixes for infoshopmobile

--- a/mobile.css
+++ b/mobile.css
@@ -23,20 +23,19 @@ body {
   font-size: 1em;
 }
 
-.bottom.stripe {
+/*.bottom.stripe {
   text-align: center;
   font-size: 1.3em;
-}
+}*/
 
 span#madeby {
   font-size: 1em;
 }
 
-/*p#bottomlinks {
+p#bottomlinks {
   text-align: center;
   font-size: 2em;
-  color: red;
-}*/
+}
 
 .m-grid {
   height: 100vh;
@@ -218,7 +217,7 @@ a:visited, a:link {
   background-color: #fff;
   color: #222;
   text-align: center;
-  padding: 35px 0 0 0;
+  padding: 35px 0 50px 0;
   grid-column-start: 1;
   grid-column-end: span 1;
 }
@@ -319,12 +318,20 @@ a:visited, a:link {
   padding: 65px 0 30px 0;
 }
 
-.content5-hash, .content5-infoshop {
+.content5-hash {
   grid-column-start: 1;
   grid-column-end: span 1;
   text-align: center;
   background-color: #fff;
   padding: 35px 10px 0 30px;
+}
+
+.content5-infoshop {
+  grid-column-start: 1;
+  grid-column-end: span 1;
+  text-align: center;
+  background-color: #fff;
+  padding: 35px 10px 40px 30px;
 }
 
 .content6-hash {
